tradução e renovação do jquery ui

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -37,19 +37,6 @@ html,body {
 
 .logo-bg {
   background: #31A1DF; /* Old browsers */
-  background: -moz-linear-gradient(left, #31A1DF 7%, #e5e5e5 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right top, color-stop(7%, #31A1DF),
-    color-stop(100%, #e5e5e5) ); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(left, #31A1DF 7%, #e5e5e5 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(left, #31A1DF 7%, #e5e5e5 100%);
-  /* Opera11.10+ */
-  background: -ms-linear-gradient(left, #31A1DF 7%, #e5e5e5 100%);
-  /* IE10+ */
-  filter: progid : DXImageTransform.Microsoft.gradient (startColorstr = '#31A1DF', endColorstr = '#E5E5E5', GradientType = 1 );
-  /* IE6-9 */
-  background: linear-gradient(left, #31A1DF 7%, #e5e5e5 100%); /* W3C */
 }
 
 .rotate-180 {
@@ -75,20 +62,18 @@ html,body {
 
 #logo {
   float: left;
-  width: 170px;
+  width: 180px;
   height: 40px;
-  background-color: #AFC8F0;
   margin-right: 10px;
   color: white;
   font-size: 3em;
   text-align: center;
   overflow: hidden;
   padding-top: 3px;
-  text-shadow: 2px 1px 5px #1C4257;
 }
 
 #toolbar {
-  background-color: #E5E5E5;
+  background-color: #FFFFFF;
   overflow: hidden;
   width: 100%;
 }
